--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,3 +18,6 @@
 @import "components/price";
 @import "components/gallery";
 @import "components/member-page-hero";
+@import "components/google-map";
+@import "components/hero-component-contact-page";
+@import "components/slider-hero";
