--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,10 +1,46 @@
 .hero-component {
+  position: relative;
   display: flex;
   gap: 12rem;
-  margin: 12rem 10rem 20rem 10rem;
+  margin: 20rem 10rem 20rem 10rem;
   position: relative;
   align-items: center;
   padding: 0 2rem;
+
+  &.hero-home {
+    @media screen and (max-width: 1600px) {
+      margin: 20rem 0rem 20rem 0rem;
+    }
+
+    @media screen and (max-width: $sm-screen-max) {
+      margin: 8rem 0 15rem 0;
+      flex-direction: column;
+      gap: 8rem;
+    }
+  }
+
+  &.contact-page-hero {
+    width: 45%;
+    margin: 20rem 0rem 0rem;
+
+    @media screen and (max-width: $lg-screen) {
+      width: auto;
+      margin: 20rem auto 0rem;
+      background-color: $color-black-transp;
+      border-radius: 3rem;
+      padding: 4rem;
+    }
+
+    @media screen and (max-width: $sm-screen) {
+      margin: 18rem auto 0rem;
+    }
+  }
+
+  &.member-hero {
+    @media screen and (max-width: 1600px) {
+      margin: 16rem 0rem 10rem 0rem;
+    }
+  }
 
   @media screen and (max-width: $max-width) {
     margin: 12rem 0 20rem 0;
@@ -132,5 +168,19 @@
     @media screen and (max-width: $sm-screen-max) {
       justify-content: center;
     }
+  }
+}
+
+.contact-page-hero-description {
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+
+  @media screen and (max-width: 1600px) {
+    gap: 1rem;
+  }
+
+  @media screen and (max-width: $lg-screen) {
+    gap: 3rem;
   }
 }
