--- a/src/scss/shared/_container.scss
+++ b/src/scss/shared/_container.scss
@@ -22,6 +22,44 @@
         display: none;
       }
     }
+
+    &.hero-home {
+      .triangle-bkg {
+        @media screen and (max-width: $lg-screen-max) {
+          display: none;
+        }
+      }
+    }
+
+    .img-contact-page {
+      position: absolute;
+      right: 0;
+      left: 50%;
+      top: 15%;
+      border-radius: 50rem 0 0 50rem;
+      width: 50%;
+      max-height: 45rem;
+      height: 100%;
+      overflow: hidden;
+
+      @media screen and (max-width: $lg-screen) {
+        left: 0;
+        width: 100%;
+        max-height: 50rem;
+        border-radius: 0;
+        z-index: -1;
+      }
+
+      img {
+        border-radius: 50rem 0 0 50rem;
+        width: 100%;
+        height: 100%;
+
+        @media screen and (max-width: $lg-screen) {
+          border-radius: 0 0 20rem 20rem;
+        }
+      }
+    }
   }
 
   @media screen and (max-width: 1600px) {
