--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,4 @@
 @import "components/google-map";
 @import "components/hero-component-contact-page";
 @import "components/slider-hero";
+@import "components/appointment";
