--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -1,28 +1,180 @@
-.containerr {
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+.appointment-form {
+  margin-bottom: 20rem;
+  padding: 0 2rem;
 
-form {
-  display: grid;
-  gap: 10px;
-}
+  @media screen and (max-width: $md-screen) {
+    margin-bottom: 10rem;
+  }
 
-button {
-  padding: 10px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+  .appointment-intro {
+    text-align: center;
+    margin-bottom: 8rem;
 
-button:hover {
-  background-color: #0056b3;
-}
+    @media screen and (max-width: $md-screen) {
+      margin-bottom: 4rem;
+    }
+  }
 
-#confirmationMessage {
-  margin-top: 20px;
-  color: #28a745;
+  .title {
+    font-size: 5rem;
+    color: $color-white;
+    font-family: $montserrat;
+    font-weight: bold;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 3rem;
+    }
+  }
+
+  .subtitle {
+    margin-top: 2rem;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.6rem;
+    }
+  }
+
+  h3 {
+    font-size: 3rem;
+    text-align: center;
+    font-weight: 500;
+  }
+
+  .container {
+    text-align: center;
+    background: linear-gradient(
+      to bottom,
+      #000000 0%,
+      $color-primary-transp 90%
+    );
+    color: rgb(255, 255, 255);
+    padding: 4rem;
+    border-radius: 3rem;
+    max-width: 42rem;
+    max-height: 40rem;
+  }
+
+  .progress-container {
+    margin: 0 auto;
+    width: 340px;
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+  }
+
+  .progress-bar-back,
+  .progress-bar-front {
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background-color: rgb(100, 100, 100);
+    border: none;
+    margin: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .progress-bar-front {
+    background-color: $primary-color;
+    transition: 0.4s linear width;
+  }
+
+  .step {
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid rgb(100, 100, 100);
+    color: #d3d3d3;
+    position: relative;
+  }
+
+  .step.checked {
+    color: $color-black;
+    border-color: $primary-color;
+    transition: all 0.4s linear;
+    transition-delay: 0.3s;
+  }
+
+  .step.checked small {
+    position: absolute;
+    bottom: -20px;
+    font-family: $montserrat;
+  }
+
+  .btn {
+    background-color: $primary-color;
+    color: $color-black;
+    text-decoration: none;
+    padding: 1.3rem 3rem;
+    border-radius: 10rem;
+    font-weight: 500;
+    white-space: nowrap;
+    cursor: pointer;
+    border: none;
+    font-size: 2rem;
+    font-weight: 500;
+    font-family: $montserrat;
+
+    &:hover {
+      background-color: $primary-color-hover;
+    }
+
+    &.transp {
+      border: 0.2rem solid $primary-color;
+      background-color: $color-black;
+      color: $color-white;
+
+      &:hover {
+        background-color: $color-primary-transp;
+      }
+    }
+  }
+
+  .btn:active {
+    transform: scale(0.97);
+  }
+
+  .btn:disabled {
+    background-color: #d3d3d3; /* Lighter disabled button color */
+  }
+
+  .form {
+    text-align: left;
+    margin: 2rem 0;
+  }
+
+  form {
+    margin: 2rem 0 3rem 0;
+  }
+
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  label {
+    font-size: 1.6rem;
+  }
+
+  input {
+    border-radius: 0.6rem;
+    padding: 1.5rem;
+    color: $color-black;
+    outline: none;
+    border: none;
+
+    &::placeholder {
+      color: $gray;
+    }
+
+    &:focus {
+      border: 0.2rem solid $primary-color;
+    }
+  }
 }
