--- a/src/scss/shared/_variables.scss
+++ b/src/scss/shared/_variables.scss
@@ -4,6 +4,7 @@ $primary-color-hover: #e1c224;
 $color-black: #272829;
 $color-white: #f5f7f8;
 $gray: #424141;
+$error-color: #b22222;
 
 /* Trans */
 $color-black-transp: rgba(39, 40, 41, 0.901);
