--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -50,8 +50,8 @@
     color: rgb(255, 255, 255);
     padding: 4rem;
     border-radius: 3rem;
-    max-width: 42rem;
-    max-height: 40rem;
+    max-width: 60rem;
+    height: auto;
   }
 
   .progress-container {
@@ -143,7 +143,6 @@
   }
 
   .form {
-    text-align: left;
     margin: 2rem 0;
   }
 
@@ -176,5 +175,39 @@
     &:focus {
       border: 0.2rem solid $primary-color;
     }
+  }
+
+  .cards-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card {
+    flex: 1;
+    border: 0.3rem solid $color-white;
+    border-radius: 3rem;
+    padding: 4rem;
+    color: $color-white;
+    font-weight: 500;
+    font-size: 2rem;
+
+    &:hover {
+      cursor: pointer;
+      border: 0.3rem solid $primary-color;
+    }
+
+    &.selected {
+      border: 0.3rem solid $primary-color;
+    }
+  }
+
+  .message-error-service {
+    display: none;
+    color: $error-color;
+    font-size: 2rem;
+    font-weight: 500;
   }
 }
