--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1955,8 +1955,8 @@ body {
   color: rgb(255, 255, 255);
   padding: 4rem;
   border-radius: 3rem;
-  max-width: 42rem;
-  max-height: 40rem;
+  max-width: 60rem;
+  height: auto;
 }
 .appointment-form .progress-container {
   margin: 0 auto;
@@ -2035,7 +2035,6 @@ body {
   background-color: #d3d3d3; /* Lighter disabled button color */
 }
 .appointment-form .form {
-  text-align: left;
   margin: 2rem 0;
 }
 .appointment-form form {
@@ -2065,4 +2064,33 @@ body {
 }
 .appointment-form input:focus {
   border: 0.2rem solid #f4ce14;
+}
+.appointment-form .cards-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+.appointment-form .card {
+  flex: 1;
+  border: 0.3rem solid #f5f7f8;
+  border-radius: 3rem;
+  padding: 4rem;
+  color: #f5f7f8;
+  font-weight: 500;
+  font-size: 2rem;
+}
+.appointment-form .card:hover {
+  cursor: pointer;
+  border: 0.3rem solid #f4ce14;
+}
+.appointment-form .card.selected {
+  border: 0.3rem solid #f4ce14;
+}
+.appointment-form .message-error-service {
+  display: none;
+  color: #b22222;
+  font-size: 2rem;
+  font-weight: 500;
 }/*# sourceMappingURL=main.css.map */
