--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -183,6 +183,7 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
+    margin-top: 4rem;
   }
 
   .card {
@@ -205,9 +206,8 @@
   }
 
   .message-error-service {
-    display: none;
     color: $error-color;
-    font-size: 2rem;
+    font-size: 1.4rem;
     font-weight: 500;
   }
 }
