--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -210,4 +210,35 @@
     font-size: 1.4rem;
     font-weight: 500;
   }
+
+  .stylist-cards {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .stylist {
+    border: 0.3rem solid $color-white;
+    padding: 4rem;
+    font-size: 2.4rem;
+    font-weight: 600;
+    color: $color-white;
+    border-radius: 3rem;
+
+    &:hover {
+      cursor: pointer;
+      border: 0.3rem solid $primary-color;
+    }
+
+    &.selected {
+      border: 0.3rem solid $primary-color;
+    }
+  }
+
+  .img-stylist {
+    width: 20rem;
+    height: 25rem;
+    border-radius: 100rem;
+    margin-bottom: 2rem;
+  }
 }
