--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import "shared/book-appointment";
 @import "shared/base";
 @import "shared/testimonial";
+@import "shared/rating";
 
 @import "components/hero";
 @import "components/services";
