--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "shared/base";
 @import "shared/testimonial";
 @import "shared/rating";
+@import "shared/backToTop";
 
 @import "components/hero";
 @import "components/services";
@@ -23,3 +24,4 @@
 @import "components/hero-component-contact-page";
 @import "components/slider-hero";
 @import "components/appointment";
+@import "components/circleProgress";
