--- a/src/scss/shared/_navigation.scss
+++ b/src/scss/shared/_navigation.scss
@@ -9,6 +9,8 @@
 
 .navigation-component {
   padding: 4rem 2rem 3rem 2rem;
+  width: 75%;
+  margin: 0 auto;
 
   .elements-nav {
     display: flex;
