--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1056,12 +1056,25 @@ body {
   margin: 0 auto;
 }
 .hero-about .hero-component {
-  gap: 10rem;
+  gap: 6rem;
   margin-top: 16rem;
 }
 .hero-about .hero-img {
-  max-width: 50rem;
+  max-width: 53rem;
   max-height: 50rem;
+}
+.hero-about .about-img {
+  position: relative;
+  cursor: pointer;
+  perspective: 800px;
+}
+.hero-about #about-img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.hero-about .about-img:hover #about-img {
+  transform: rotateY(20deg);
 }
 
 .services-component {
@@ -1382,7 +1395,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   border-radius: 0.5rem;
 }
 .team-component .members {
@@ -1414,6 +1426,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 3rem;
+  padding: 0 2rem;
 }
 @media screen and (max-width: 992px) {
   .working-hours-container {
