--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -209,6 +209,11 @@
     color: $error-color;
     font-size: 1.4rem;
     font-weight: 500;
+    display: none;
+
+    &.active {
+      display: block;
+    }
   }
 
   .stylist-cards {
@@ -240,5 +245,23 @@
     height: 25rem;
     border-radius: 100rem;
     margin-bottom: 2rem;
+  }
+
+  .price-service {
+    font-size: 1.8rem;
+    margin-top: 2rem;
+  }
+
+  .item-form {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+    gap: 1rem;
+    text-align: left;
+  }
+
+  .error {
+    font-size: 1.4rem;
+    color: $error-color;
   }
 }
