--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -40,7 +40,8 @@
     font-weight: 500;
   }
 
-  .container {
+  .appointment-form-container {
+    position: relative;
     text-align: center;
     background: linear-gradient(
       to bottom,
@@ -51,15 +52,20 @@
     padding: 4rem;
     border-radius: 3rem;
     max-width: 60rem;
+    width: 100%;
     height: auto;
   }
 
   .progress-container {
     margin: 0 auto;
-    width: 340px;
+    width: 60%;
     display: flex;
     position: relative;
     justify-content: space-between;
+
+    @media screen and (max-width: $xs-screen-mid) {
+      width: 80%;
+    }
   }
 
   .progress-bar-back,
@@ -263,5 +269,29 @@
   .error {
     font-size: 1.4rem;
     color: $error-color;
+  }
+
+  .container-overview {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .title-overview {
+    font-weight: 500;
+    font-size: 2rem;
+  }
+
+  #closeButton {
+    position: absolute;
+    top: -1.5rem;
+    right: -1.5rem;
+    border-radius: 100rem;
+    padding: 1rem 1.5rem;
+  }
+
+  .message-success {
+    font-size: 3rem;
   }
 }
