--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -2096,21 +2096,28 @@ body {
   text-align: center;
   font-weight: 500;
 }
-.appointment-form .container {
+.appointment-form .appointment-form-container {
+  position: relative;
   text-align: center;
   background: linear-gradient(to bottom, #000000 0%, rgba(244, 207, 20, 0.168627451) 90%);
   color: rgb(255, 255, 255);
   padding: 4rem;
   border-radius: 3rem;
   max-width: 60rem;
+  width: 100%;
   height: auto;
 }
 .appointment-form .progress-container {
   margin: 0 auto;
-  width: 340px;
+  width: 60%;
   display: flex;
   position: relative;
   justify-content: space-between;
+}
+@media screen and (max-width: 414px) {
+  .appointment-form .progress-container {
+    width: 80%;
+  }
 }
 .appointment-form .progress-bar-back,
 .appointment-form .progress-bar-front {
@@ -2285,6 +2292,26 @@ body {
 .appointment-form .error {
   font-size: 1.4rem;
   color: #ff0101;
+}
+.appointment-form .container-overview {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.appointment-form .title-overview {
+  font-weight: 500;
+  font-size: 2rem;
+}
+.appointment-form #closeButton {
+  position: absolute;
+  top: -1.5rem;
+  right: -1.5rem;
+  border-radius: 100rem;
+  padding: 1rem 1.5rem;
+}
+.appointment-form .message-success {
+  font-size: 3rem;
 }
 
 .circle-bar .radial-progress {
