--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,18 +2,17 @@
   position: relative;
   display: flex;
   gap: 12rem;
-  margin: 20rem 10rem 20rem 10rem;
+  padding: 5rem 10rem 20rem 10rem;
   position: relative;
   align-items: center;
-  padding: 0 2rem;
 
   &.hero-home {
     @media screen and (max-width: 1600px) {
-      margin: 20rem 0rem 20rem 0rem;
+      padding: 5rem 2rem 20rem 2rem;
     }
 
     @media screen and (max-width: $sm-screen-max) {
-      margin: 13rem 0 10rem 0;
+      padding: 5rem 2rem 10rem 2rem;
     }
 
     @media screen and (max-width: $sm-screen-max) {
@@ -24,51 +23,55 @@
 
   &.contact-page-hero {
     width: 45%;
-    margin: 20rem 0rem 0rem;
+    padding: 5rem 2rem 0rem;
 
     @media screen and (max-width: $lg-screen) {
       width: auto;
-      margin: 20rem auto 0rem;
+      padding: 5rem auto 0rem;
       background-color: $color-black-transp;
       border-radius: 3rem;
       padding: 4rem;
     }
 
     @media screen and (max-width: $sm-screen) {
-      margin: 18rem auto 0rem;
+      padding: 18rem auto 0rem;
     }
   }
 
   &.member-hero {
     @media screen and (max-width: 1600px) {
-      margin: 16rem 0rem 10rem 0rem;
+      padding: 5rem 2rem 10rem 2rem;
       gap: 8rem;
     }
   }
 
+  &.appoinment-hero {
+    gap: 4rem;
+  }
+
   &.appoinment-hero,
   &.about-hero {
-    margin: 20rem 0 20rem 0;
+    padding: 5rem 2rem 20rem 2rem;
 
     @media screen and (max-width: $md-screen) {
-      margin: 13rem 0 8rem 0;
+      padding: 5rem 2rem 8rem 2rem;
       gap: 2rem;
     }
   }
 
   @media screen and (max-width: $max-width) {
-    margin: 12rem 0 20rem 0;
+    padding: 12rem 2rem 20rem 2rem;
     gap: 4rem;
   }
 
   @media screen and (max-width: $sm-screen-max) {
-    margin: 8rem 0 15rem 0;
+    padding: 8rem 2rem 15rem 2rem;
     flex-direction: column;
     gap: 8rem;
   }
 
   @media screen and (max-width: $md-screen) {
-    margin: 8rem 0 10rem 0;
+    padding: 8rem 2rem 10rem 2rem;
     gap: 5rem;
   }
 
@@ -136,12 +139,9 @@
       height: 100%;
     }
 
-    &.member-img {
+    &.member-img,
+    &.appointment-img {
       max-height: 50rem;
-
-      @media screen and (max-width: 1600px) {
-        max-height: 70rem;
-      }
 
       @media screen and (max-width: $lg-screen) {
         margin: 0 auto;
@@ -149,8 +149,7 @@
       }
     }
 
-    &.appointment-img,
-    &.about-img {
+    &.appointment-img {
       img {
         border: none;
       }
@@ -207,32 +206,14 @@
 }
 
 .hero-about {
-  width: 90%;
   margin: 0 auto;
 
   .hero-component {
     gap: 6rem;
-    margin-top: 16rem;
   }
 
   .hero-img {
     max-width: 53rem;
     max-height: 50rem;
-  }
-
-  .about-img {
-    position: relative;
-    cursor: pointer;
-    perspective: 800px;
-  }
-
-  #about-img {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.5s ease-in-out;
-  }
-
-  .about-img:hover #about-img {
-    transform: rotateY(20deg);
   }
 }
