--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -41,13 +41,15 @@ h6 {
   font-weight: 100;
 }
 
-.nav-fixed {
+#nav-fixed {
   margin: 0 auto;
   width: 100%;
+}
+#nav-fixed.active {
   position: fixed;
+  background-color: #272829;
   top: 0;
   z-index: 1000;
-  background-color: #272829;
 }
 
 .navigation-component {
@@ -86,7 +88,7 @@ h6 {
     gap: 6rem;
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1250px) {
   .navigation-component .menu {
     gap: 4rem;
   }
@@ -111,15 +113,55 @@ h6 {
   }
 }
 .navigation-component .link-menu {
+  position: relative;
+  display: inline-block;
   text-decoration: none;
   font-size: 1.8rem;
-  color: #f5f7f8;
+  font-weight: 500;
+  color: #272829;
 }
 .navigation-component .link-menu.active {
-  color: #f4ce14;
+  color: #272829;
+  font-weight: 700;
 }
-.navigation-component .link-menu:hover {
-  color: #f4ce14;
+.navigation-component .link-menu.change-color {
+  color: #f5f7f8;
+}
+.navigation-component .link-menu.change-color::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.2rem;
+  background-color: #f5f7f8;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.2s ease-in-out;
+}
+.navigation-component .link-menu.change-color:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+.navigation-component .link-menu.contact-page {
+  color: #f5f7f8;
+}
+.navigation-component .link-menu::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.2rem;
+  border-radius: 0.4rem;
+  background-color: #272829;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+.navigation-component .link-menu:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 .navigation-component .space {
   display: inline-block;
@@ -139,7 +181,7 @@ h6 {
   transition: all 0.3s ease-in-out;
   background-color: #272829;
 }
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1150px) {
   .navigation-component .menu {
     position: fixed;
     left: -100%;
@@ -201,6 +243,7 @@ h6 {
 .footer {
   background-color: #f4ce14;
   padding: 6rem 2rem;
+  position: relative;
 }
 .footer .logo {
   width: 20rem;
@@ -267,6 +310,13 @@ h6 {
 .footer .item-list:hover {
   font-weight: 500;
 }
+.footer .storyset {
+  font-size: 1rem;
+  text-decoration: none;
+  color: #272829;
+  position: absolute;
+  bottom: 1rem;
+}
 
 .primary-button {
   background-color: #f4ce14;
@@ -288,41 +338,60 @@ h6 {
 .primary-button.transp:hover {
   background-color: rgba(244, 207, 20, 0.168627451);
 }
+.primary-button.nav {
+  background-color: #272829;
+  color: #f5f7f8;
+}
+.primary-button.nav:hover {
+  background-color: rgba(39, 40, 41, 0.901);
+}
+.primary-button.nav.contact-page {
+  background-color: #f4ce14;
+  color: #272829;
+}
+.primary-button.nav.contact-page:hover {
+  background-color: #e1c224;
+}
+.primary-button.nav.change-color {
+  background-color: #f4ce14;
+  color: #272829;
+}
+.primary-button.nav.change-color:hover {
+  background-color: #e1c224;
+}
+.primary-button #nav-btn {
+  background-color: #272829;
+  color: #f5f7f8;
+}
+.primary-button #nav-btn:hover {
+  background-color: rgba(39, 40, 41, 0.901);
+}
+
+header {
+  background-image: url("../../img/sections-img/hero-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 1024px) {
+  header {
+    background-image: url("../../img/sections-img/hero-background-mid.png");
+  }
+}
+@media screen and (max-width: 768px) {
+  header {
+    background-image: url("../../img/sections-img/hero-background-small-screen.png");
+  }
+}
+header.contact {
+  background-image: none;
+}
 
 .container {
   width: 100%;
   max-width: 1400px;
   margin: 0rem auto;
 }
-.container.header .triangle-bkg {
-  position: absolute;
-  left: -10rem;
-  top: 13rem;
-  max-width: 22rem;
-  width: 100%;
-  max-height: 55rem;
-  height: 100%;
-}
-@media screen and (max-width: 1024px) {
-  .container.header .triangle-bkg {
-    max-width: 16rem;
-    max-height: 30rem;
-  }
-}
-@media screen and (max-width: 1024px) {
-  .container.header .triangle-bkg {
-    display: none;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .container.header.hero-home .triangle-bkg, .container.header.hero-contact .triangle-bkg {
-    display: none;
-  }
-}
-.container.header.hero-appointment .triangle-bkg {
-  display: none;
-}
-.container.header .img-contact-page {
+.container .img-contact-page {
   position: absolute;
   right: 0;
   left: 50%;
@@ -334,7 +403,7 @@ h6 {
   overflow: hidden;
 }
 @media screen and (max-width: 1024px) {
-  .container.header .img-contact-page {
+  .container .img-contact-page {
     left: 0;
     width: 100%;
     max-height: 50rem;
@@ -342,13 +411,13 @@ h6 {
     z-index: -1;
   }
 }
-.container.header .img-contact-page img {
+.container .img-contact-page img {
   border-radius: 50rem 0 0 50rem;
   width: 100%;
   height: 100%;
 }
 @media screen and (max-width: 1024px) {
-  .container.header .img-contact-page img {
+  .container .img-contact-page img {
     border-radius: 0 0 20rem 20rem;
   }
 }
@@ -479,10 +548,11 @@ h6 {
 .form-component .form-img-box {
   max-width: 65rem;
   max-height: 52rem;
+  width: 100%;
 }
 @media screen and (max-width: 1600px) {
   .form-component .form-img-box {
-    max-width: 38rem;
+    max-width: 42rem;
     max-height: 100%;
   }
 }
@@ -638,6 +708,16 @@ body {
 
 .accent-yellow {
   color: #f4ce14;
+}
+@media screen and (max-width: 991px) {
+  .accent-yellow.hero {
+    color: #f5f7f8;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .accent-yellow.hero-mid {
+    color: #f5f7f8;
+  }
 }
 
 .testimonials-component {
@@ -849,19 +929,18 @@ body {
   position: relative;
   display: flex;
   gap: 12rem;
-  margin: 20rem 10rem 20rem 10rem;
+  padding: 5rem 10rem 20rem 10rem;
   position: relative;
   align-items: center;
-  padding: 0 2rem;
 }
 @media screen and (max-width: 1600px) {
   .hero-component.hero-home {
-    margin: 20rem 0rem 20rem 0rem;
+    padding: 5rem 2rem 20rem 2rem;
   }
 }
 @media screen and (max-width: 991px) {
   .hero-component.hero-home {
-    margin: 13rem 0 10rem 0;
+    padding: 5rem 2rem 10rem 2rem;
   }
 }
 @media screen and (max-width: 991px) {
@@ -872,12 +951,12 @@ body {
 }
 .hero-component.contact-page-hero {
   width: 45%;
-  margin: 20rem 0rem 0rem;
+  padding: 5rem 2rem 0rem;
 }
 @media screen and (max-width: 1024px) {
   .hero-component.contact-page-hero {
     width: auto;
-    margin: 20rem auto 0rem;
+    padding: 5rem auto 0rem;
     background-color: rgba(39, 40, 41, 0.901);
     border-radius: 3rem;
     padding: 4rem;
@@ -885,40 +964,43 @@ body {
 }
 @media screen and (max-width: 768px) {
   .hero-component.contact-page-hero {
-    margin: 18rem auto 0rem;
+    padding: 18rem auto 0rem;
   }
 }
 @media screen and (max-width: 1600px) {
   .hero-component.member-hero {
-    margin: 16rem 0rem 10rem 0rem;
+    padding: 5rem 2rem 10rem 2rem;
     gap: 8rem;
   }
 }
+.hero-component.appoinment-hero {
+  gap: 4rem;
+}
 .hero-component.appoinment-hero, .hero-component.about-hero {
-  margin: 20rem 0 20rem 0;
+  padding: 5rem 2rem 20rem 2rem;
 }
 @media screen and (max-width: 992px) {
   .hero-component.appoinment-hero, .hero-component.about-hero {
-    margin: 13rem 0 8rem 0;
+    padding: 5rem 2rem 8rem 2rem;
     gap: 2rem;
   }
 }
 @media screen and (max-width: 1400px) {
   .hero-component {
-    margin: 12rem 0 20rem 0;
+    padding: 12rem 2rem 20rem 2rem;
     gap: 4rem;
   }
 }
 @media screen and (max-width: 991px) {
   .hero-component {
-    margin: 8rem 0 15rem 0;
+    padding: 8rem 2rem 15rem 2rem;
     flex-direction: column;
     gap: 8rem;
   }
 }
 @media screen and (max-width: 992px) {
   .hero-component {
-    margin: 8rem 0 10rem 0;
+    padding: 8rem 2rem 10rem 2rem;
     gap: 5rem;
   }
 }
@@ -985,21 +1067,16 @@ body {
   width: 100%;
   height: 100%;
 }
-.hero-component .hero-img.member-img {
+.hero-component .hero-img.member-img, .hero-component .hero-img.appointment-img {
   max-height: 50rem;
 }
-@media screen and (max-width: 1600px) {
-  .hero-component .hero-img.member-img {
-    max-height: 70rem;
-  }
-}
 @media screen and (max-width: 1024px) {
-  .hero-component .hero-img.member-img {
+  .hero-component .hero-img.member-img, .hero-component .hero-img.appointment-img {
     margin: 0 auto;
     max-width: 30rem;
   }
 }
-.hero-component .hero-img.appointment-img img, .hero-component .hero-img.about-img img {
+.hero-component .hero-img.appointment-img img {
   border: none;
 }
 .hero-component .img-shadow {
@@ -1054,29 +1131,14 @@ body {
 }
 
 .hero-about {
-  width: 90%;
   margin: 0 auto;
 }
 .hero-about .hero-component {
   gap: 6rem;
-  margin-top: 16rem;
 }
 .hero-about .hero-img {
   max-width: 53rem;
   max-height: 50rem;
-}
-.hero-about .about-img {
-  position: relative;
-  cursor: pointer;
-  perspective: 800px;
-}
-.hero-about #about-img {
-  width: 100%;
-  height: 100%;
-  transition: transform 0.5s ease-in-out;
-}
-.hero-about .about-img:hover #about-img {
-  transform: rotateY(20deg);
 }
 
 .services-component {
@@ -1758,17 +1820,17 @@ body {
 
 .member-page {
   position: relative;
-  margin-bottom: 40rem;
+  margin-bottom: 20rem;
 }
 @media screen and (max-width: 992px) {
   .member-page {
-    margin-bottom: 25rem;
+    margin-bottom: 10rem;
   }
 }
 
 .member-info {
   position: absolute;
-  top: 50rem;
+  top: 80%;
   background-color: #424141;
   height: 20rem;
   display: flex;
@@ -1779,12 +1841,12 @@ body {
 }
 @media screen and (max-width: 1024px) {
   .member-info {
-    top: 65rem;
+    top: 90%;
   }
 }
 @media screen and (max-width: 992px) {
   .member-info {
-    top: 70rem;
+    top: 80%;
   }
 }
 @media screen and (max-width: 414px) {
@@ -2289,15 +2351,23 @@ body {
   gap: 1rem;
   text-align: left;
 }
+.appointment-form .icon {
+  margin-right: 0.5rem;
+}
 .appointment-form .error {
   font-size: 1.4rem;
   color: #ff0101;
 }
 .appointment-form .container-overview {
-  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  border-radius: 3rem;
+  border: 0.3rem solid #f4ce14;
+  padding: 2rem;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 2rem auto 0 auto;
 }
 .appointment-form .title-overview {
   font-weight: 500;
@@ -2311,7 +2381,18 @@ body {
   padding: 1rem 1.5rem;
 }
 .appointment-form .message-success {
-  font-size: 3rem;
+  font-size: 4rem;
+  font-weight: 600;
+}
+@media screen and (max-width: 768px) {
+  .appointment-form .message-success {
+    font-size: 3rem;
+  }
+}
+.appointment-form .img-success {
+  max-width: 30rem;
+  width: 100%;
+  margin-top: 2rem;
 }
 
 .circle-bar .radial-progress {
