--- a/src/scss/shared/_container.scss
+++ b/src/scss/shared/_container.scss
@@ -1,70 +1,52 @@
+header {
+  background-image: url("../../img/sections-img/hero-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  @media screen and (max-width: $lg-screen) {
+    background-image: url("../../img/sections-img/hero-background-mid.png");
+  }
+
+  @media screen and (max-width: $sm-screen) {
+    background-image: url("../../img/sections-img/hero-background-small-screen.png");
+  }
+
+  &.contact {
+    background-image: none;
+  }
+}
+
 .container {
   width: 100%;
   max-width: $max-width;
   margin: 0rem auto;
 
-  &.header {
-    .triangle-bkg {
-      position: absolute;
-      left: -10rem;
-      top: 13rem;
-      max-width: 22rem;
+  .img-contact-page {
+    position: absolute;
+    right: 0;
+    left: 50%;
+    top: 15%;
+    border-radius: 50rem 0 0 50rem;
+    width: 50%;
+    max-height: 45rem;
+    height: 100%;
+    overflow: hidden;
+
+    @media screen and (max-width: $lg-screen) {
+      left: 0;
       width: 100%;
-      max-height: 55rem;
-      height: 100%;
-
-      @media screen and (max-width: $lg-screen) {
-        max-width: 16rem;
-        max-height: 30rem;
-      }
-
-      @media screen and (max-width: $lg-screen) {
-        display: none;
-      }
+      max-height: 50rem;
+      border-radius: 0;
+      z-index: -1;
     }
 
-    &.hero-home,
-    &.hero-contact {
-      .triangle-bkg {
-        @media screen and (max-width: $lg-screen-max) {
-          display: none;
-        }
-      }
-    }
-
-    &.hero-appointment {
-      .triangle-bkg {
-        display: none;
-      }
-    }
-
-    .img-contact-page {
-      position: absolute;
-      right: 0;
-      left: 50%;
-      top: 15%;
+    img {
       border-radius: 50rem 0 0 50rem;
-      width: 50%;
-      max-height: 45rem;
+      width: 100%;
       height: 100%;
-      overflow: hidden;
 
       @media screen and (max-width: $lg-screen) {
-        left: 0;
-        width: 100%;
-        max-height: 50rem;
-        border-radius: 0;
-        z-index: -1;
-      }
-
-      img {
-        border-radius: 50rem 0 0 50rem;
-        width: 100%;
-        height: 100%;
-
-        @media screen and (max-width: $lg-screen) {
-          border-radius: 0 0 20rem 20rem;
-        }
+        border-radius: 0 0 20rem 20rem;
       }
     }
   }
